Use system fonts, remove text shadows, rebuild

--- a/src/dat/gui/style.scss
+++ b/src/dat/gui/style.scss
@@ -30,12 +30,10 @@ $input-color: lighten($background-color, 8.5%);
   margin-left: 5px;
   margin-top: 1px;
   border-radius: 2px;
-  font-size: 9px;
-  line-height: 7px;
+  font: small-caption;
   padding: 4px 4px 5px 4px;
   background: $button-color;
   color: #fff;
-  text-shadow: 0 1px 0 darken($button-color, 10%);
   box-shadow: 0 -1px 0 darken($button-color, 10%);
   cursor: pointer;
 }
@@ -53,8 +51,7 @@ $input-color: lighten($background-color, 8.5%);
 
 
   color: #eee;
-  font: 11px 'Lucida Grande', sans-serif;
-  text-shadow: 0 -1px 0 #111;
+  font: caption;
 
   /** Auto place */
   &.main {
