--- a/src/dat/gui/style.css
+++ b/src/dat/gui/style.css
@@ -85,7 +85,7 @@
     padding: 0 4px 0 5px; }
   .dg li.folder {
     padding: 0;
-    border-left: 4px solid transparent; }
+    border-left: 4px solid rgba(0, 0, 0, 0); }
   .dg li.title {
     cursor: pointer;
     margin-left: -4px; }
@@ -193,7 +193,8 @@
 /** Main type */
 .dg {
   color: #eee;
-  font: caption;
+  font: 11px 'Lucida Grande', sans-serif;
+  text-shadow: 0 -1px 0 #111;
   /** Auto place */
   /* Controller row, <li> */
   /** Controllers */ }
@@ -222,10 +223,12 @@
       margin-left: 5px;
       margin-top: 1px;
       border-radius: 2px;
-      font: small-caption;
+      font-size: 9px;
+      line-height: 7px;
       padding: 4px 4px 5px 4px;
       background: #c5bdad;
       color: #fff;
+      text-shadow: 0 1px 0 #b0a58f;
       box-shadow: 0 -1px 0 #b0a58f;
       cursor: pointer; }
       .dg li.save-row .button.gears {
@@ -239,7 +242,7 @@
     border-bottom: 0; }
   .dg li.title {
     padding-left: 16px;
-    background: #000 url(data:image/gif;base64,R0lGODlhBQAFAJEAAP////Pz8////////yH5BAEAAAIALAAAAAAFAAUAAAIIlI+hKgFxoCgAOw==) 6px 10px no-repeat;
+    background: black url(data:image/gif;base64,R0lGODlhBQAFAJEAAP////Pz8////////yH5BAEAAAIALAAAAAAFAAUAAAIIlI+hKgFxoCgAOw==) 6px 10px no-repeat;
     cursor: pointer;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
   .dg .closed li.title {
@@ -249,9 +252,9 @@
   .dg .cr.function {
     border-left: 3px solid #e61d5f; }
   .dg .cr.number {
-    border-left: 3px solid #2FA1D6; }
+    border-left: 3px solid #2fa1d6; }
     .dg .cr.number input[type=text] {
-      color: #2FA1D6; }
+      color: #2fa1d6; }
   .dg .cr.string {
     border-left: 3px solid #1ed36f; }
     .dg .cr.string input[type=text] {
@@ -270,10 +273,8 @@
     background: #303030;
     cursor: ew-resize; }
   .dg .c .slider-fg {
-    background: #2FA1D6; }
+    background: #2fa1d6; }
   .dg .c .slider:hover {
     background: #3c3c3c; }
     .dg .c .slider:hover .slider-fg {
       background: #44abda; }
-
-/*# sourceMappingURL=style.css.map */
